Attempt upload_to_website from windwos

--- a/Business_Model.ipynb
+++ b/Business_Model.ipynb
@@ -137,108 +137,111 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'count(*)': 58298}]\n",
-      "[{'count(DISTINCT question)': 54369}]\n",
-      "\u001b[94mreddit    \u001b[0mHey, would anybody mind checking out this game? Thanks!\n",
-      "\u001b[94mreddit    \u001b[0mUpgrade from netcast to webos?\n",
-      "\u001b[94mreddit    \u001b[0mdo we draw fags or not?\n",
-      "\u001b[94mreddit    \u001b[0mSkeptical cat: \"You what?\"\n",
-      "\u001b[94mreddit    \u001b[0m11 days no updates?\n",
-      "\u001b[94mreddit    \u001b[0mwhat was the most shocking thing you heard the quiet kid say?\n",
-      "\u001b[94mreddit    \u001b[0m\"the signal\" all gekeken?\n",
-      "\u001b[94mreddit    \u001b[0mTreatment for endo after surgery?\n",
-      "\u001b[94mreddit    \u001b[0mSo is this sub even active anymore?\n",
-      "\u001b[94mreddit    \u001b[0mFollicular Phase BBT?\n",
-      "\u001b[94mreddit    \u001b[0mFriends who are ttc?\n",
-      "\u001b[94mreddit    \u001b[0mHow do I \"give it to God\" when I need to chart?\n",
-      "\u001b[94mreddit    \u001b[0mAnyone try TempDrop?\n",
-      "\u001b[94mreddit    \u001b[0mQuestionable conceiving advice?\n",
-      "\u001b[94mreddit    \u001b[0mAny experience with anti-phospholipid syndrome (APS) or heparin/lovenox during pregnancy?\n",
-      "\u001b[94mreddit    \u001b[0mHow to support my (currently childless) friends?\n",
-      "\u001b[94mreddit    \u001b[0mAre you a college student with high school e-learning experiences?\n",
-      "\u001b[94mreddit    \u001b[0mSibley hall internet access?\n",
-      "\u001b[94mreddit    \u001b[0mTired Studying?\n",
-      "\u001b[94mreddit    \u001b[0mI have been accepted in Confederation College Film Production program. how is it? experienced people please share your experience\n",
-      "\u001b[94mreddit    \u001b[0mDifficulties paying back OSAP?\n",
-      "\u001b[94mreddit    \u001b[0m@LionsbridgeFC: @USLLeagueTwo Can confirm. He’s fantastic. Remember this? https://t.co/moh6r7QDFn\n",
-      "\u001b[94mreddit    \u001b[0mAny good transformation stories from darkness retreats?\n",
-      "\u001b[94mreddit    \u001b[0mDarkness retreat in USA?\n",
-      "\u001b[94mreddit    \u001b[0mWhat is your favorite darkroom retreat?\n",
-      "\u001b[94mreddit    \u001b[0mDMT ‘Hallucinations’ or Expansion of the Spectrum?\n",
-      "\u001b[94mreddit    \u001b[0mIn an upside down world, how do you deal with a male coworker who is everyones favourite but actually a devil playing politics?\n",
-      "\u001b[94mreddit    \u001b[0mWho touches it, really?\n",
-      "\u001b[94mreddit    \u001b[0mSo is this Subreddit dead? :(\n",
-      "\u001b[94mreddit    \u001b[0mBest keylogger for Mac?\n",
-      "\u001b[94mreddit    \u001b[0mI want to download a keylogger. Help me out?\n",
-      "\u001b[94mreddit    \u001b[0mWhy is this subreddit empty? Am I violating some reddit rule by posting here?\n",
-      "\u001b[94mreddit    \u001b[0mHelp me identify this SVT-40? Inherited from my late father, family member interested in buying it, would like to know exactly what it is/worth.\n",
-      "\u001b[94mreddit    \u001b[0mAnyone know where to buy SOVIET svt mags in Canada?\n",
-      "\u001b[94mreddit    \u001b[0mWhere in Canada can you buy the gas adjustment tool?\n",
-      "\u001b[94mreddit    \u001b[0mDoes anyone read this?\n",
-      "\u001b[94mreddit    \u001b[0mAnyone know where I can find SVT blueprints?\n",
-      "\u001b[94mreddit    \u001b[0mAnyone hearing rumors for 2020 LineUp?\n",
-      "\u001b[94mreddit    \u001b[0m  Video Stream?\n",
-      "\u001b[94mreddit    \u001b[0mUpdates on security?\n",
-      "\u001b[94mreddit    \u001b[0mCan you sleep in your car with a parking pass?\n",
-      "\u001b[94mreddit    \u001b[0mCheap campgrounds near bethel?\n",
-      "\u001b[94mreddit    \u001b[0mPhil Lesh and Friends! Who will the friends be? Will he pick from the other bands at the festival to start a supergroup for the night?\n",
-      "\u001b[94mreddit    \u001b[0mWill the PS110 support 750hz displays?\n",
-      "\u001b[94mreddit    \u001b[0mPro 2A Tactical - Good or Bad?\n",
-      "\u001b[94mreddit    \u001b[0mScope mount with rails for an old rifle? (Haenel 312)\n",
-      "\u001b[94mreddit    \u001b[0mBest iron sight options for sig p365 xl?\n",
-      "\u001b[94mreddit    \u001b[0mDoes anyone have any recommendations for a safe?\n",
-      "\u001b[94mreddit    \u001b[0mWhats the hype about G10 Grips??\n",
-      "\u001b[94mreddit    \u001b[0mCheap and fun targets? Walmart brand 12 pack of soda!\n",
-      "\u001b[94mreddit    \u001b[0mWhat Do You Guys Think?\n",
-      "\u001b[94mreddit    \u001b[0mWhat Age Did You Buy Your First Gun?\n",
-      "\u001b[94mreddit    \u001b[0mYildiz TK-12 - Slugs okay?\n",
-      "\u001b[94mreddit    \u001b[0mShe’s making Music Now? I hope she Sings, & doesn’t Rap. She probably has a beautiful voice.....\n",
-      "\u001b[94mreddit    \u001b[0mis there any pornstar similar to her ?\n",
-      "\u001b[94mreddit    \u001b[0mWhats more annoying on this sub?\n",
-      "\u001b[94mreddit    \u001b[0mCock and ball torture?\n",
-      "\u001b[94mreddit    \u001b[0mWhats your preference?\n",
-      "\u001b[94mreddit    \u001b[0mWhats the price of a mile?\n",
-      "\u001b[94mreddit    \u001b[0mWould you the what the are the when???\n",
-      "\u001b[94mreddit    \u001b[0m           yes?\n",
-      "\u001b[94mreddit    \u001b[0mWould you rather?\n",
-      "\u001b[94mreddit    \u001b[0mWould you rather?????\n",
-      "\u001b[94mreddit    \u001b[0mWould you rather?\n",
-      "\u001b[94mreddit    \u001b[0mDoes anyone own discord?\n",
-      "\u001b[94mreddit    \u001b[0mAnyone out there in production with Shop Floor Connect?\n",
-      "\u001b[94mreddit    \u001b[0mGot a zip tie? Fold it backwards so it doesnt lock and you have an adjustable Joint/Roach clip.\n",
-      "\u001b[94mreddit    \u001b[0mwhat happens if you remove the base os?\n",
-      "\u001b[94mreddit    \u001b[0mIs it possible to run bedrock with solus?\n",
-      "\u001b[94mreddit    \u001b[0mEnabling services across strata?\n",
-      "\u001b[94mreddit    \u001b[0mHow to add stratum from an .iso?\n",
-      "\u001b[94mreddit    \u001b[0mHow to use pacman as pkg manager in void linux ?\n",
-      "\u001b[94mreddit    \u001b[0mHow do I remove Bedrock Linux?\n",
-      "\u001b[94mreddit    \u001b[0mAny pictures of your WorkPlace? Any stories about something interesting at Work? Post it here!\n",
-      "\u001b[94mreddit    \u001b[0mSo where does everyone work?\n",
-      "\u001b[94mreddit    \u001b[0mNot thinking straight, will someone please read my paper outline and help me clear my thoughts?\n",
-      "\u001b[94mreddit    \u001b[0m\"how many actual chromosomes do you have in your head, Opus?\"\n",
-      "\u001b[94mreddit    \u001b[0m\"lol joe you missed a golden opportunity, Stephen Hawking died... hahaha minus one eve pod right?\"\n",
-      "\u001b[94mreddit    \u001b[0m\"wait, if they collapse, who will HK have to fight? ... wait, who is the dagger\"?\n",
-      "\u001b[94mreddit    \u001b[0mBest factions server???\n",
-      "\u001b[94mreddit    \u001b[0mBAD IDEA - The Emoji Movie - Worst film ever??\n",
-      "\u001b[94mreddit    \u001b[0mDo women love beards or hate beards?\n",
-      "\u001b[94mreddit    \u001b[0mLara Logan: Why Does Antifa Hate Andy Ngo?\n",
-      "\u001b[94mreddit    \u001b[0mRemind you of a certain group?\n",
-      "\u001b[94mreddit    \u001b[0mHow fast are current programs computationally verifying the Collatz conjecture?\n",
-      "\u001b[94mreddit    \u001b[0mHow far has Collatz conjecture been computationally verified?\n",
-      "\u001b[94mreddit    \u001b[0mWhy is this not a proof of the Collatz conjecture?\n",
-      "\u001b[94mreddit    \u001b[0mIs there anybody here?\n",
-      "\u001b[94mreddit    \u001b[0mSo.. anyone able to set up an OmniFob?\n",
-      "\u001b[94mreddit    \u001b[0mWhat the fuck, this isnt Stars of the Lid?\n",
-      "\u001b[94mreddit    \u001b[0mWhat does SoTL Mean to You?\n",
-      "\u001b[94mreddit    \u001b[0mIMMW: How much time have I spent on reddit?\n",
-      "\u001b[94mreddit    \u001b[0mAccess to mental health services?\n",
-      "\u001b[94mreddit    \u001b[0mDo you want to be heard by an empathetic listener? Join our voice bot beta test: bit.ly/talktobitbybit\n",
-      "\u001b[94mreddit    \u001b[0mYour experience in mental hospital?\n",
-      "\u001b[94mreddit    \u001b[0mWHATS IN YOUR MOUTH CHALLENGE!?!? (GONE DiRtY)\n",
-      "\u001b[94mreddit    \u001b[0mCould Psychedelic Drugs Help smokers quit? BBC\n",
-      "\u001b[94mreddit    \u001b[0mWheaton il? Im a guitarist/vocalist looking for a bassist and a drummer\n",
-      "\u001b[94mreddit    \u001b[0mDid my African Dwarf Frogs lay eggs/tadpole sacks?\n",
-      "\u001b[94mreddit    \u001b[0mWhy didnt Kylo know where to find Luke?\n"
+      "[{'count(*)': 65675}]\n",
+      "[{'count(DISTINCT question)': 60937}]\n",
+      "\u001b[94mreddit    \u001b[0mKaraoke or jam nights?\n",
+      "\u001b[94mreddit    \u001b[0mAny good bars in town?\n",
+      "\u001b[94mreddit    \u001b[0mWait... is this small town Maysville, Kentucky?\n",
+      "\u001b[94mreddit    \u001b[0mReddit meet-up this year?\n",
+      "\u001b[94mreddit    \u001b[0mSo everyone was asking for Raven i remember... Why ?\n",
+      "\u001b[94mreddit    \u001b[0mDoes anybody know how to fix this No Ads (Try Later) issue?\n",
+      "\u001b[94mreddit    \u001b[0mDo you experience problem right now, anyone!?\n",
+      "\u001b[94mreddit    \u001b[0mNo more reload?\n",
+      "\u001b[94mreddit    \u001b[0mWhat do you think about these gloves?\n",
+      "\u001b[94mreddit    \u001b[0m    Multikills?\n",
+      "\u001b[94mreddit    \u001b[0mWhich one is better?\n",
+      "\u001b[94mreddit    \u001b[0mWhat is special about Demonic Channelers?\n",
+      "\u001b[94mreddit    \u001b[0mHow many shots are fired per second at normal fire rate?\n",
+      "\u001b[94mreddit    \u001b[0mWill deathstate ever make it to Nintendo switch?\n",
+      "\u001b[94mreddit    \u001b[0mEndless mode drops. Any advice on how to get them all?\n",
+      "\u001b[94mreddit    \u001b[0mDoes the dark realms have a boss?\n",
+      "\u001b[94mreddit    \u001b[0mThe Octillion vs King In Yellow, Complete Edition - The Octillion is just better, right?\n",
+      "\u001b[94mreddit    \u001b[0mIs it just me or is the final set of levels (save the boss) the easiest?\n",
+      "\u001b[94mreddit    \u001b[0mIs the game not releasing on eu?\n",
+      "\u001b[94mreddit    \u001b[0mThe Masters Seal has been broken?\n",
+      "\u001b[94mreddit    \u001b[0mOptic Staff vs The Golden Triblade?\n",
+      "\u001b[94mreddit    \u001b[0mWhat is is the Dark Realm?\n",
+      "\u001b[94mreddit    \u001b[0mCrobatman Part 5: The End?\n",
+      "\u001b[94mreddit    \u001b[0mIS Nicki Minaj signing with Diddy the end of her career?\n",
+      "\u001b[94mreddit    \u001b[0m Am I Gregnant?\n",
+      "\u001b[94mreddit    \u001b[0mwait why do we hate r/circlebroke2 again?\n",
+      "\u001b[94mreddit    \u001b[0mWhere to find the good deals on Charter Spectrum Internet Plans?\n",
+      "\u001b[94mreddit    \u001b[0mWhy is this sub actually a thing? I searched up \"Panzer Vore!\" playing around with the phrase \"Panzer Vor!\" and I find this? Good Lord!\n",
+      "\u001b[94mreddit    \u001b[0mHave you heard the tragedy of Yukiukite Senshadou? Its not a story that r/GuP would tell you.\n",
+      "\u001b[94mreddit    \u001b[0mTheres an upside-down tiger floating above me isnt there?\n",
+      "\u001b[94mreddit    \u001b[0mAre you afraid that your crypto investments might get stolen or hacked from an exchange like Poloniex or Bittrex? Look no further than the Ledger Nano S, a cryptocurrency hardware wallet with robust safety features for storing cryptographic assets and sec\n",
+      "\u001b[94mreddit    \u001b[0mBitcoin ALERTS?\n",
+      "\u001b[94mreddit    \u001b[0mIs it worth buying more bitcoin when you have the available funds like a savings account? Sort of like topping up, or is that a bad idea?\n",
+      "\u001b[94mreddit    \u001b[0mShould I invest in Bitcoin?\n",
+      "\u001b[94mreddit    \u001b[0m     Rothscoin?\n",
+      "\u001b[94mreddit    \u001b[0mWhat IS Stoichiometry??\n",
+      "\u001b[94mreddit    \u001b[0mI picked these up at a flea market today. Anyone have any info on them?\n",
+      "\u001b[94mreddit    \u001b[0mSpencerian slant notepads/sheets?\n",
+      "\u001b[94mreddit    \u001b[0mHow is it living in Yeovil, Somerset?\n",
+      "\u001b[94mreddit    \u001b[0mDo you guys remember this little gem?\n",
+      "\u001b[94mreddit    \u001b[0mWhen did you realise you were XXX bitch triple X rated?\n",
+      "\u001b[94mreddit    \u001b[0mHow many of us sad lads are sitting here alone on new years eve?\n",
+      "\u001b[94mreddit    \u001b[0mAny Rp Servers still active?\n",
+      "\u001b[94mreddit    \u001b[0mIs it worth buying the game now?\n",
+      "\u001b[94mreddit    \u001b[0mGame Wednesday at 9?\n",
+      "\u001b[94mreddit    \u001b[0mGame tonight? Click on this now!\n",
+      "\u001b[94mreddit    \u001b[0mOur Thirty fourth episode published on October Second 2019. We compare Machi Koro vs Space Base. Then we discuss the Pathfinder free RPG Day adventure \"We Be Heroes?\".\n",
+      "\u001b[94mreddit    \u001b[0m   1v1 anyone? \n",
+      "\u001b[94mreddit    \u001b[0mA new study debunks the benefits of segregation by \n",
+      "sex in the classroom, and says the practice does \n",
+      "more harm than good. Should it be illegal? \n",
+      "\u001b[94mreddit    \u001b[0mWomen students at coeducational and womens \n",
+      "colleges: How do their experiences compare?\n",
+      "\u001b[94mreddit    \u001b[0mDrape suspended?\n",
+      "\u001b[94mreddit    \u001b[0mHey I made a Nebraska Rideshare subreddit. I figured we ought to share our vehicles since everything is along one interstate. Ive never made a subreddit before so if it sucks, well screw you. You can be a mod if youre so smart. Tell your friends so maybe \n",
+      "\u001b[94mreddit    \u001b[0mCan I get an upvote?\n",
+      "\u001b[94mreddit    \u001b[0mIs anyones cox slow?\n",
+      "\u001b[94mreddit    \u001b[0mWhy the circle jerk?\n",
+      "\u001b[94mreddit    \u001b[0mWhy arent there any meetups anymore?\n",
+      "\u001b[94mreddit    \u001b[0mAnyone else agree Michelle Keegan looks like a young Monica?\n",
+      "\u001b[94mreddit    \u001b[0mMonica Bellucci .. Elegant Milf..Anyone wanna talk about her ?\n",
+      "\u001b[94mreddit    \u001b[0mAnyone here have a telegram sticker pack for Monica bellucci?\n",
+      "\u001b[94mreddit    \u001b[0mWhere can I get a Finn skin? I want to be like abc.\n",
+      "\u001b[94mreddit    \u001b[0mserver down for anybody else?\n",
+      "\u001b[94mreddit    \u001b[0mFulpstation u gud?\n",
+      "\u001b[94mreddit    \u001b[0mhow do you look at your notes?\n",
+      "\u001b[94mreddit    \u001b[0m         rules?\n",
+      "\u001b[94mreddit    \u001b[0mfirst the game, now discord?\n",
+      "\u001b[94mreddit    \u001b[0mam i allowed 2 say da n word? omg omg dont tell my mom!!111\n",
+      "\u001b[94mreddit    \u001b[0mDo you like Kylie when she is soft?\n",
+      "\u001b[94mreddit    \u001b[0mIs today the day you give into girlcock?\n",
+      "\u001b[94mreddit    \u001b[0mIs wakeandvape still around?\n",
+      "\u001b[94mreddit    \u001b[0mWhat purchase shows up under the credit card charge?\n",
+      "\u001b[94mreddit    \u001b[0m Easter Coupon?\n",
+      "\u001b[94mreddit    \u001b[0mhi its me kat i am wait what is this shit helo? AnyonE SstilL L HERE?! Please HELP ME OH MY GOFSD\n",
+      "\u001b[94mreddit    \u001b[0mSo can we talk about pedals here?\n",
+      "\u001b[94mreddit    \u001b[0mPeavey classic 30 hum noise- is this normal?\n",
+      "\u001b[94mreddit    \u001b[0mboss katana ok?\n",
+      "\u001b[94mreddit    \u001b[0mWould I overpower a bass player and drummer with this?... theyre just noise anyway..\n",
+      "\u001b[94mreddit    \u001b[0mIf you could only use either your subtle amp distortion or your subtle amp reverb, what would you do?\n",
+      "\u001b[94mreddit    \u001b[0mMy humble bedroom setup. What kind of attenuator should I get so itll sound the same at lower volumes?\n",
+      "\u001b[94mreddit    \u001b[0mDoes anyone here not use an amp?\n",
+      "\u001b[94mreddit    \u001b[0mis the booze jr the best amp?\n",
+      "\u001b[94mreddit    \u001b[0mWhy are these stones on this cemetery gate? Theyre on the other side too.\n",
+      "\u001b[94mreddit    \u001b[0mAny graveyards that have statues not religion related?\n",
+      "\u001b[94mreddit    \u001b[0mMost wonderful names?\n",
+      "\u001b[94mreddit    \u001b[0mWhat should a modern graveyard look like?\n",
+      "\u001b[94mreddit    \u001b[0mHow has been your voting experience?\n",
+      "\u001b[94mreddit    \u001b[0mHow safe is Conyers?\n",
+      "\u001b[94mreddit    \u001b[0mLoud explosion sound and gunshots?!?\n",
+      "\u001b[94mreddit    \u001b[0mCurbside recycling services?\n",
+      "\u001b[94mreddit    \u001b[0mFound a lost dog, no microchip no collar. Does anyone recognize him?\n",
+      "\u001b[94mreddit    \u001b[0mFirst Game! Howzabout Smolensk?\n",
+      "\u001b[94mreddit    \u001b[0mSamsung S 10 Blockchain Wallet is Here; What Does that Mean? - The Best Wallet for You\n",
+      "\u001b[94mreddit    \u001b[0mCoinOutlet Makes a Bad Decision? Just Kidding.\n",
+      "\u001b[94mreddit    \u001b[0mSo...guys. We dont really give a shit. Does that pretty much cover it? Anything else to discuss?\n",
+      "\u001b[94mreddit    \u001b[0mIs there any seaman rom?\n",
+      "\u001b[94mreddit    \u001b[0mI have this graphical glitch problem with the journal. How can I solve it?\n",
+      "\u001b[94mreddit    \u001b[0mWondering if anyone can help. I can play the games just fine, but the controls are invisible. How can I fix this?\n",
+      "\u001b[94mreddit    \u001b[0mHow did you guys get into PC?\n",
+      "\u001b[94mreddit    \u001b[0mHow Well Do Polish Club Know Each Other?\n",
+      "\u001b[94mreddit    \u001b[0mAnybody for Tuesday/Wednesday?\n",
+      "\u001b[94mreddit    \u001b[0mSunday morning?\n"
      ]
     }
    ],
