Stopped tracking analytics ipynb, attempt 2

--- a/Business_Model.ipynb
+++ b/Business_Model.ipynb
@@ -137,8 +137,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'count(*)': 65708}]\n",
-      "[{'count(DISTINCT question)': 60967}]\n",
+      "[{'count(*)': 65737}]\n",
+      "[{'count(DISTINCT question)': 60995}]\n",
+      "\u001b[94mreddit    \u001b[0mQué significa ningo?\n",
+      "\u001b[94mreddit    \u001b[0mOpiniones sobre el curso de guaraní en Duolingo?\n",
+      "\u001b[94mreddit    \u001b[0mAlguna persona que habla el guaraní puede decirme estas palabras tienen algún sentido en su idioma?\n",
+      "\u001b[94mreddit    \u001b[0mWhy \"todo ya\" in Paraguayan Spanish?\n",
+      "\u001b[94mreddit    \u001b[0mAlguna Persona que habla el guarani puede me dicer se estas palabras hacen algun sentido en su idioma?\n",
+      "\u001b[94mreddit    \u001b[0mAlguien que habla guaraní acá.?\n",
+      "\u001b[94mreddit    \u001b[0mHello :) I bought this print in Argentina for my sister back in the UK, and Im trying to translate what it means... I think the first word means \"freedom\", though I could be wrong. Any help?\n",
+      "\u001b[94mreddit    \u001b[0mGuarani Duolingo course to teach Jopara. Thoughts?\n",
+      "\u001b[94mreddit    \u001b[0mLooking for a partner on the battlefield?\n",
+      "\u001b[94mreddit    \u001b[0mAnyone remember Upop?\n",
+      "\u001b[94mreddit    \u001b[0mDoes Anyone Know What They Are Building In Front Of Target & Home Depot?\n",
+      "\u001b[94mreddit    \u001b[0mAttorneys specializing in representing home owners against HOA regarding passive-aggressive common area landscaping conflict? [Serious]\n",
+      "\u001b[94mreddit    \u001b[0mWhats it like being suburban?\n",
+      "\u001b[94mreddit    \u001b[0mCAN I RECOMMEND THIS AS THE FIRST LINK IN THE SIDEBAR?\n",
+      "\u001b[94mreddit    \u001b[0mWhat are the turks doing in Afrin?\n",
+      "\u001b[94mreddit    \u001b[0mLooking for hidden wiring suggestions to get light strip underneath single cabinet on left hand side of sink. There is a plug in behind the microwave and will be using that as main power source. Will be buying govee (sp?) brand\n",
+      "\u001b[94mreddit    \u001b[0mHow do I fix an LED strip thats burnt at the socket?\n",
+      "\u001b[94mreddit    \u001b[0mWhat do I do about that is there a way to fix it?\n",
+      "\u001b[94mreddit    \u001b[0mDoes anyone know if I can cut one led out from the end of the strip and then wire it somewhere in the middle of the LEDs so it lights up with the rest, like imagine a line of strips but then with 1 led coming up?\n",
+      "\u001b[94mreddit    \u001b[0mWhat is The Best and powerful Security Solar flood lights? Here The article you may know more about this. Some days ago i have collected this blog from a search engine, which is very very helpful to me. Also, it becomes a help to you too. Thank You\n",
+      "\u001b[94mreddit    \u001b[0mOne of the wires broke off howbdo I fixed my lights work again?\n",
+      "\u001b[94mreddit    \u001b[0mWhat is The best LED Solar Flood Lights?\n",
+      "\u001b[94mreddit    \u001b[0mWhat are the disadvantages of LEDs?\n",
+      "\u001b[94mreddit    \u001b[0mBrand new light strip and these aren’t working right. Can anyone help?\n",
+      "\u001b[94mreddit    \u001b[0mHi! I am trying to light 90 strips of LEDs w/ 5-10 LEDs in each strip. Ik i can connect all of them with wires, but i need the ends of each strip to be wireless. Any way that the LEDs will work based on either pic drew? I know i will need more parts, & if\n",
+      "\u001b[94mreddit    \u001b[0mAnybody know where I can get LED’s like Ninja’s setup? Never watched him but those look really sleek\n",
+      "\u001b[94mreddit    \u001b[0mIs it possible to get 25ft of color changing LED strip from one controller and one remote?\n",
+      "\u001b[94mreddit    \u001b[0mHELP My LED light strip controller is screwed up. The colours are all jumbled up. When I press the power button, it turns green and when I press the red button, it shows me green. Does anyone else have the same issue?\n",
+      "\u001b[94mreddit    \u001b[0mHey BOTES fanatics, who cant appreciate all of these great BOTES?\n",
       "\u001b[94mreddit    \u001b[0mFerdie the goat gets new legs! - have an animal in need of a prosthetic? were now casting for season 2 of Wizard of Paws, receive a free prosthetic, email us at bionicpetscasting@gmail.com\n",
       "\u001b[94mreddit    \u001b[0mA little too much \"grass\"?\n",
       "\u001b[94mreddit    \u001b[0mWhen talking about Cerberus, the 3 headed dog guarding hell, should you use plural or singular? Like I will pet the dog/dogs?\n",
@@ -209,39 +238,7 @@
       "\u001b[94mreddit    \u001b[0m     Rothscoin?\n",
       "\u001b[94mreddit    \u001b[0mWhat IS Stoichiometry??\n",
       "\u001b[94mreddit    \u001b[0mI picked these up at a flea market today. Anyone have any info on them?\n",
-      "\u001b[94mreddit    \u001b[0mSpencerian slant notepads/sheets?\n",
-      "\u001b[94mreddit    \u001b[0mHow is it living in Yeovil, Somerset?\n",
-      "\u001b[94mreddit    \u001b[0mDo you guys remember this little gem?\n",
-      "\u001b[94mreddit    \u001b[0mWhen did you realise you were XXX bitch triple X rated?\n",
-      "\u001b[94mreddit    \u001b[0mHow many of us sad lads are sitting here alone on new years eve?\n",
-      "\u001b[94mreddit    \u001b[0mAny Rp Servers still active?\n",
-      "\u001b[94mreddit    \u001b[0mIs it worth buying the game now?\n",
-      "\u001b[94mreddit    \u001b[0mGame Wednesday at 9?\n",
-      "\u001b[94mreddit    \u001b[0mGame tonight? Click on this now!\n",
-      "\u001b[94mreddit    \u001b[0mOur Thirty fourth episode published on October Second 2019. We compare Machi Koro vs Space Base. Then we discuss the Pathfinder free RPG Day adventure \"We Be Heroes?\".\n",
-      "\u001b[94mreddit    \u001b[0m   1v1 anyone? \n",
-      "\u001b[94mreddit    \u001b[0mA new study debunks the benefits of segregation by \n",
-      "sex in the classroom, and says the practice does \n",
-      "more harm than good. Should it be illegal? \n",
-      "\u001b[94mreddit    \u001b[0mWomen students at coeducational and womens \n",
-      "colleges: How do their experiences compare?\n",
-      "\u001b[94mreddit    \u001b[0mDrape suspended?\n",
-      "\u001b[94mreddit    \u001b[0mHey I made a Nebraska Rideshare subreddit. I figured we ought to share our vehicles since everything is along one interstate. Ive never made a subreddit before so if it sucks, well screw you. You can be a mod if youre so smart. Tell your friends so maybe \n",
-      "\u001b[94mreddit    \u001b[0mCan I get an upvote?\n",
-      "\u001b[94mreddit    \u001b[0mIs anyones cox slow?\n",
-      "\u001b[94mreddit    \u001b[0mWhy the circle jerk?\n",
-      "\u001b[94mreddit    \u001b[0mWhy arent there any meetups anymore?\n",
-      "\u001b[94mreddit    \u001b[0mAnyone else agree Michelle Keegan looks like a young Monica?\n",
-      "\u001b[94mreddit    \u001b[0mMonica Bellucci .. Elegant Milf..Anyone wanna talk about her ?\n",
-      "\u001b[94mreddit    \u001b[0mAnyone here have a telegram sticker pack for Monica bellucci?\n",
-      "\u001b[94mreddit    \u001b[0mWhere can I get a Finn skin? I want to be like abc.\n",
-      "\u001b[94mreddit    \u001b[0mserver down for anybody else?\n",
-      "\u001b[94mreddit    \u001b[0mFulpstation u gud?\n",
-      "\u001b[94mreddit    \u001b[0mhow do you look at your notes?\n",
-      "\u001b[94mreddit    \u001b[0m         rules?\n",
-      "\u001b[94mreddit    \u001b[0mfirst the game, now discord?\n",
-      "\u001b[94mreddit    \u001b[0mam i allowed 2 say da n word? omg omg dont tell my mom!!111\n",
-      "\u001b[94mreddit    \u001b[0mDo you like Kylie when she is soft?\n"
+      "\u001b[94mreddit    \u001b[0mSpencerian slant notepads/sheets?\n"
      ]
     }
    ],
